[tool.poetry]
name = "any_case"
version = "0.1.1"
description = "Snake/Camle case converter with django and rest_framework integration"
repository = "https://github.com/asduj/any_case"
authors = ["asduj <asduj@ya.ru>"]
license = "MIT"
keywords = ["snake-case", "django", "rest_framework", "camel-case"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
django = "^2.2"
djangorestframework = "^3.9"
pytest-django = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
